--- a/src/Winhance.WPF/Features/SoftwareApps/Views/ExternalAppsTableView.xaml
+++ b/src/Winhance.WPF/Features/SoftwareApps/Views/ExternalAppsTableView.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="Winhance.WPF.Features.SoftwareApps.Views.WindowsAppsTableView"
+<UserControl x:Class="Winhance.WPF.Features.SoftwareApps.Views.ExternalAppsTableView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,7 +9,7 @@
     xmlns:controls="clr-namespace:Winhance.WPF.Features.Common.Controls"
     xmlns:behaviors="clr-namespace:Winhance.WPF.Features.Common.Behaviors" 
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-    d:DataContext="{d:DesignInstance Type=viewModels:WindowsAppsViewModel}" mc:Ignorable="d">
+    d:DataContext="{d:DesignInstance Type=viewModels:ExternalAppsViewModel}" mc:Ignorable="d">
 
     
     <controls:ResponsiveScrollViewer>
@@ -35,7 +35,7 @@
                 <ListView.Template>
                     <ControlTemplate TargetType="{x:Type ListView}">
                         <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
-                            <ScrollViewer x:Name="_scrollViewer" Padding="{TemplateBinding Padding}" Style="{DynamicResource {x:Static GridView.GridViewScrollViewerStyleKey}}" HorizontalScrollBarVisibility="Disabled">
+                            <ScrollViewer Padding="{TemplateBinding Padding}" Style="{DynamicResource {x:Static GridView.GridViewScrollViewerStyleKey}}" HorizontalScrollBarVisibility="Disabled">
                                 <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                             </ScrollViewer>
                         </Border>
@@ -53,9 +53,9 @@
                         <GridView.ColumnHeaderContainerStyle>
                             <Style TargetType="{x:Type GridViewColumnHeader}" BasedOn="{StaticResource ThemedGridViewColumnHeader}">
                                 <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                                <Setter Property="HorizontalAlignment" Value="Stretch" />
                             </Style>
                         </GridView.ColumnHeaderContainerStyle>
+                        <!-- Set proportional widths for columns to fill available container space -->
                         <!-- Select All Column -->
                         <GridViewColumn Width="40"><!-- Keep fixed width for checkbox column -->
                             <GridViewColumnHeader Style="{StaticResource FirstColumnHeader}">
@@ -86,62 +86,44 @@
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
 
-                        <!-- Type Column -->
-                        <GridViewColumn Width="150"><!-- Slightly increased width -->
-                            <GridViewColumnHeader Style="{StaticResource ThemedGridViewColumnHeader}" Tag="ItemType" Content="Type">
+                        <!-- Package ID Column -->
+                        <GridViewColumn Width="180"><!-- Slightly increased width -->
+                            <GridViewColumnHeader Style="{StaticResource ThemedGridViewColumnHeader}" Tag="PackageName" Content="Package ID">
                                 <GridViewColumnHeader.InputBindings>
-                                    <MouseBinding MouseAction="LeftClick" Command="{Binding SortByCommand}" CommandParameter="ItemType"/>
+                                    <MouseBinding MouseAction="LeftClick" Command="{Binding SortByCommand}" CommandParameter="PackageName"/>
                                 </GridViewColumnHeader.InputBindings>
                             </GridViewColumnHeader>
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding ItemType}"/>
+                                    <TextBlock Text="{Binding PackageName}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
 
-                        <!-- Status Column -->
+                        <!-- Category Column -->
                         <GridViewColumn Width="150"><!-- Slightly increased width -->
-                            <GridViewColumnHeader Style="{StaticResource ThemedGridViewColumnHeader}" Tag="IsInstalled" Content="Status">
+                            <GridViewColumnHeader Style="{StaticResource ThemedGridViewColumnHeader}" Tag="Category" Content="Category">
                                 <GridViewColumnHeader.InputBindings>
-                                    <MouseBinding MouseAction="LeftClick" Command="{Binding SortByCommand}" CommandParameter="IsInstalled"/>
+                                    <MouseBinding MouseAction="LeftClick" Command="{Binding SortByCommand}" CommandParameter="Category"/>
                                 </GridViewColumnHeader.InputBindings>
                             </GridViewColumnHeader>
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <StackPanel Orientation="Horizontal">
-                                        <Ellipse Style="{StaticResource AppStatusIndicatorStyle}"
-                                                 Fill="{Binding IsInstalled, Converter={StaticResource InstalledStatusToColorConverter}}">
-                                            <Ellipse.ToolTip>
-                                                <ToolTip Content="{Binding IsInstalled, Converter={StaticResource InstalledStatusToTextConverter}}"/>
-                                            </Ellipse.ToolTip>
-                                        </Ellipse>
-                                        <TextBlock Text="{Binding IsInstalled, Converter={StaticResource InstalledStatusToTextConverter}}" Margin="5,0,0,0" />
-                                    </StackPanel>
+                                    <TextBlock Text="{Binding Category}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
 
-                        <!-- Installable Column -->
-                        <GridViewColumn Width="180"><!-- Further increased width for 'Installable' header -->
-                            <GridViewColumnHeader Style="{StaticResource LastColumnHeader}" Tag="CanBeReinstalled" Content="Installable">
+                        <!-- Source Column -->
+                        <GridViewColumn Width="150"><!-- Slightly increased width -->
+                            <GridViewColumnHeader Style="{StaticResource LastColumnHeader}" Tag="Source" Content="Source">
                                 <GridViewColumnHeader.InputBindings>
-                                    <MouseBinding MouseAction="LeftClick" Command="{Binding SortByCommand}" CommandParameter="CanBeReinstalled"/>
+                                    <MouseBinding MouseAction="LeftClick" Command="{Binding SortByCommand}" CommandParameter="Source"/>
                                 </GridViewColumnHeader.InputBindings>
                             </GridViewColumnHeader>
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
-                                    <StackPanel Orientation="Horizontal">
-                                        <materialDesign:PackIcon
-                                            Style="{StaticResource ReinstallabilityIndicatorStyle}"
-                                            Kind="{Binding CanBeReinstalled, Converter={StaticResource BooleanToReinstallableIconConverter}}"
-                                            Foreground="{Binding CanBeReinstalled, Converter={StaticResource StatusToColorConverter}}">
-                                            <materialDesign:PackIcon.ToolTip>
-                                                <ToolTip Content="{Binding CanBeReinstalled, Converter={StaticResource BooleanToReinstallableTextConverter}}"/>
-                                            </materialDesign:PackIcon.ToolTip>
-                                        </materialDesign:PackIcon>
-                                        <TextBlock Text="{Binding CanBeReinstalled, Converter={StaticResource BooleanToReinstallableTextConverter}}" Margin="5,0,0,0" />
-                                    </StackPanel>
+                                    <TextBlock Text="winget/msstore"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
